--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "description": "vue ssr nuxt drupal node ",
   "author": "thunder King star",
   "private": true,
-  "dependencies": {
-    "nuxt": "latest"
-  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -15,8 +12,14 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
+  "dependencies": {
+    "axios": "^0.16.1",
+    "mint-ui": "^2.2.9",
+    "nuxt": "latest"
+  },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-component": "^0.10.0",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-loader": "^1.6.1",
